# mumble-streamdeck-integration

./: CMakeLists.txt
info.mumble.mumble.sdPlugin/: manifest.json
src/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  EPLJSONUtils.h  ESDBasePlugin.h  ESDConnectionManager.cpp  ESDConnectionManager.h  ESDSDKDefines.h  MumblePlugin.cpp  MumblePlugin.h  StreamDeckPlugin.cpp  StreamDeckPlugin.h  Utils.cpp  main.cpp  sayHello.cpp
